# aya-node

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.build  README.md  cardano_test.py  daemon_conf.toml  diff.txt  docker-compose+cardano_node.yml  docker-compose.yml  repository_structure.txt  rustc-ice-2024-06-17T12_25_50-537218.txt  rustc-ice-2024-06-17T12_31_26-542162.txt  rustc-ice-2024-06-17T12_37_42-547947.txt  rustc-ice-2024-06-17T13_04_12-567327.txt  rustc-ice-2024-06-17T13_07_44-569571.txt  rustc-ice-2024-06-17T13_21_45-581518.txt  rustc-ice-2024-06-17T13_23_39-582926.txt  rustc-ice-2024-06-19T17_29_39-2412047.txt  rustc-ice-2024-06-19T17_35_13-2417264.txt  rustc-ice-2024-06-19T17_36_13-2418336.txt  rustc-ice-2024-06-19T18_05_04-2445172.txt  rustc-ice-2024-06-19T18_06_41-2446380.txt  rustc-ice-2024-06-24T20_15_12-493940.txt  setup_cardano_nodes.sh  start_network.py  start_network2.py  wm-devnet-chainspec.json
.github/workflows/: build.yml
aya-shared/: Cargo.toml
aya-shared/src/: lib.rs
aya-traits/: Cargo.toml
aya-traits/src/: lib.rs  lib6-14-24.rs  suggested_lib.rs
docs/: guide_custom_account.md  guide_join_devnet.md  guide_join_devnet_simple.md  guide_keys_aya_bin.md  guide_keys_subkey.md  guide_local_chain_setup.md  leader.md  todo5-2-24.md
examples/contract-erc20/: package-lock.json
examples/contract-hello/: package-lock.json
node/: Cargo.toml  package-lock.json  package.json
node/cardano_rpc_test/: testRPC.js
node/src/: benchmarking.rs  chain_spec.rs  client.rs  command.rs  eth.rs  main.rs  service.rs
node/src/rpc/: cardano_follower.rs  custom_rpc.rs  eth.rs  mod.rs  priority_queue_rpc.rs
node/src/rpc/cardano_rpc_test/: testRPC.js
pallets/chain-listener/: Cargo.toml
pallets/chain-listener/src/: aya.scrolls.code-workspace  benchmarking.rs  lib.rs  tests.rs
pallets/chain-listener/src/rpc/: Cargo.toml
pallets/chain-listener/src/rpc/runtime-api/: Cargo.toml
pallets/chain-listener/src/rpc/runtime-api/src/: lib.rs
pallets/chain-listener/src/rpc/src/: lib.rs
pallets/pallet-epoch/: Cargo.toml
pallets/pallet-epoch/src/: benchmarking.rs  lib.rs  lib62224.rs  limits.rs  mock.rs  tests.rs  types.rs
pallets/pallet-registration/: Cargo.toml
pallets/pallet-registration/src/: benchmarking.rs
pallets/substrate-validator-set/: Cargo.toml
pallets/substrate-validator-set/src/: mock.rs
runtime/: Cargo.toml
runtime/src/: account_id_conversion.rs  assets_api.rs  convert_validator.rs  lib.rs  lib.rs_old.rs
scripts/: alice.sh  bob.sh  charlie.sh  clean.sh  session.sh
scrolls/: daemon.toml
tests/: checkTransactions.js  commands.sh  fetchExtrinsics.js  monitor.js  monitor3.js  package-lock.json  package.json
utils/account_derivation_tools/: README.md  config.json.example
utils/account_derivation_tools/scripts/: derive_multi.sh  get_keys.sh
utils/account_derivation_tools/tools/keys/: index.ts  package.json
utils/session_key_tools/: split_session_key.sh
