[package]
name = "aya-shared"
version = "0.1.0"
authors = ["World mobile group"]
edition = "2021"
description = "Shared types and utilities for Aya project"
license = "Apache-2.0"

[dependencies]
# frame-support = { version = "4.0.0", default-features = false }
# scale-info = { version = "2.0.0", default-features = false }
# serde = { version = "1.0", features = ["derive"] }
# sp-core = { version = "4.0.0", default-features = false }

# sp-std = { version = "4.0.0", default-features = false }
# thread_local = "1.1.4" # Add this line
# environmental = { version = "1.1.4", default-features = false }

scale-codec = { workspace = true }
sp-runtime = { workspace = true }
fp-account = {workspace = true}
frame-support = { workspace = true }
sp-core = { workspace = true }
frame-system = { workspace = true }
