[package]
name = "aya-traits"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
frame-system = { workspace = true }
frame-support = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
fp-account = { workspace = true }
scale-codec = { workspace = true }
sp-application-crypto = { workspace = true }
scale-info = { workspace = true }
sp-std = { workspace = true }