[package]
name = "aya-traits"
version = "0.1.0"
authors = ["World Mobile Group"]
edition = "2021"

[dependencies]
aya-shared = { path = "../aya-shared" }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
environmental = { workspace = true }
fp-account = { workspace = true }
scale-codec = { workspace = true }
sp-application-crypto = { workspace = true }