[package]
name = 'pallet-epoch'
version = '1.1.0'
authors = ['Sylvain Cormier <sylvaincormier@webisoft.com>']
description = "Register a node to the network"
edition = '2021'
repository = 'https://github.com/worldmobilegroup/aya-node'
license = 'Apache-2.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
frame-benchmarking = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
scale-info = { workspace = true }
log = { workspace = true }
scale-codec = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-std = {workspace = true}
serde = { workspace = true }
serde_json = { workspace = true }
pallet-session = { workspace = true }
sp-application-crypto = { workspace = true }
substrate-validator-set = { workspace = true }
sp-state-machine = { workspace = true }
fp-account = { workspace = true }

[dev-dependencies]
scale-codec = { workspace = true }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.9.0", default-features = false }
mockall = "0.12.1" 

pallet-epoch = { path = "../pallet-epoch" }  # Adjust the path according to your project structure



[features]
default = ["std"]
std = [
	"scale-codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"serde/std",
	"serde_json/std",
	"sp-application-crypto/std",
	 "sp-core/std",

]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
